--- a/react-calculator/src/component/App.scss
+++ b/react-calculator/src/component/App.scss
@@ -37,7 +37,7 @@ body {
         width: 300px;
         background-color: #303030;
         border-radius: 15px;
-        padding: 35px 35px;
+        padding: 35px 15px;
         .result-container {
             @include flexbox();
             flex-direction: column-reverse;
@@ -89,9 +89,10 @@ body {
             .equals {
                 color: #fff;
                 background-color: #FF6364;
-                border-radius: 30px;
-                width: 60px;
-                margin: 0 7px 0 7px;
+                border-radius: 25px;
+                width: 50px;
+                height: 50px;
+                margin: 7px 12px 0 7px;
             }
         }
     }
