--- a/react-calculator/src/component/App.scss
+++ b/react-calculator/src/component/App.scss
@@ -1,27 +1,13 @@
-@mixin font {
-    font-family: 'Roboto', sans-serif !important;
-    font-weight: normal;
-}
-
-@mixin flexbox() {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-}
+@import '../common/variable';
 
 body {
-    button {
-        @include font;
-    }
 
-    @include font;
+    @include font();
 
     font-size: 100%;
-    color: #fff;
+    color: $white;
     line-height: 1.0em;
-    background-color: #f0f0f0 !important;
+    background-color: $colour-background;
     
     #root {
         @include flexbox();
@@ -35,28 +21,28 @@ body {
         flex-direction: column;
         height: 500px;
         width: 300px;
-        background-color: #303030;
+        background-color: $colour-primary;
         border-radius: 15px;
         padding: 35px 15px;
-        box-shadow: 5px 5px 20px #303030;
+        box-shadow: 5px 5px 20px $colour-primary;
         .result-container {
             @include flexbox();
             flex-direction: column-reverse;
             padding: 10px 5px;
             height: 180px;
-            border-bottom: 1px solid #888888;
+            border-bottom: 1px solid $colour-border;
             text-align: right;
             margin: 0 15px;
             overflow-x: hidden;
             .operation-list {
-                color: #888888;
-                font-size: 15px;
+                color: $colour-border;
+                font-size: $font-size;
                 order: 2;
                 padding-right: 5px;
                 word-wrap: break-word;
             }
             .result {
-                font-size: 65px;
+                font-size: $font-result;
                 line-height: 1.2em;
                 order: 1;
                 word-wrap: break-word;
@@ -67,12 +53,13 @@ body {
             padding: 15px 0;
 
             .button {
-                background-color: #303030;
+                @include font();
+                background-color: $colour-primary;
                 border: none;
                 height: 60px;
                 width: 75px;
-                color: #888888;
-                font-size: 15px;
+                color: $colour-border;
+                font-size: $font-size;
                 &:focus {
                     border: none;
                     outline: none;
@@ -86,11 +73,11 @@ body {
             flex-direction: column;
             text-align: right;
             .button {
-                color: #FF6364;
+                color: $colour-secondary;
             }
             .equals {
-                color: #fff;
-                background-color: #FF6364;
+                color: $white;
+                background-color: $colour-secondary;
                 border-radius: 25px;
                 width: 50px;
                 height: 50px;
